--- a/css/style.css
+++ b/css/style.css
@@ -12,4 +12,11 @@ body {
     background: #eee;
     font-family: sans-serif;
     font-size: 2rem;
+    padding: 4rem;
+}
+
+.games {}
+
+.game {
+    list-style: none;
 }
