--- a/css/style.css
+++ b/css/style.css
@@ -12,11 +12,30 @@ body {
     background: #eee;
     font-family: sans-serif;
     font-size: 2rem;
-    padding: 4rem;
+    padding: 8rem;
 }
 
-.games {}
+main {
+    width: 100%;
+}
+
+.games {
+    width: 100%;
+    display: flex;
+    flex-wrap: wrap;
+    gap: 2rem;
+    justify-content: center;
+    align-items: center;
+}
 
 .game {
     list-style: none;
+    width: 25rem;
+    height: 30rem;
+}
+
+.game img {
+    width: 100%;
+    height: 100%;
+    object-fit: contain;
 }
