--- a/css/style.css
+++ b/css/style.css
@@ -32,6 +32,11 @@ main {
     list-style: none;
     width: 25rem;
     height: 30rem;
+    transition: 0.2s transform;
+}
+
+.game:hover {
+    transform: scale(1.1);
 }
 
 .game img {
