--- a/css/style.css
+++ b/css/style.css
@@ -33,10 +33,11 @@ main {
     width: 25rem;
     height: 30rem;
     transition: 0.2s transform;
+    cursor: pointer;
 }
 
 .game:hover {
-    transform: scale(1.1);
+    transform: scale(1.1) translateY(-0.7rem);
 }
 
 .game img {
