add styling for labels

--- a/css/style.css
+++ b/css/style.css
@@ -19,9 +19,25 @@ main {
     width: 100%;
 }
 
+.inputs {
+    display: flex;
+    align-items: center;
+    justify-content: flex-start;
+    gap: 4rem;
+    width: 100%;
+    margin-bottom: 4rem;
+}
+
+.inputs>div {
+    display: flex;
+    align-items: center;
+    width: 40rem;
+}
+
 .filter {
     width: 5rem;
     height: 5rem;
+    margin-right: 2rem;
 }
 
 .games {
