--- a/css/style.css
+++ b/css/style.css
@@ -38,6 +38,19 @@ main {
     width: 5rem;
     height: 5rem;
     margin-right: 2rem;
+    -webkit-appearance: none;
+    appearance: none;
+    background: #eee;
+    border-radius: 0.5rem;
+    box-shadow: inset 0 0 0.5rem 0 rgba(0, 0, 0, 0.2);
+}
+
+.filter:checked {
+    background: pink;
+}
+
+.filter:checked~.label {
+    text-decoration: underline;
 }
 
 .games {
